[package]
name = "player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
tokio = { version = "1.36.0", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "io-util",
] }
tokio-util = { version = "0.7.10", features = ["codec"] }
futures = "0.3.30"
rand = "0.8.5"
clap = { version = "4.5.3", features = ["derive"] }
